cmake_minimum_required(VERSION 3.23)
project(CS_151)

set(CMAKE_CXX_STANDARD 14)
#Module 1
#add_executable(SortNumbers Mod1/HW/SortNumbers/SortNumbers.cpp)
#add_executable(SortCountries Mod1/HW/SortCountries/SortCountries.cpp Mod1/HW/SortCountries/Country.cpp)
#Module 2
#add_executable(pi Mod2/review.cpp)
#add_executable(DtB Mod2/HW/DecimalToBinary/DecimalToBinary.cpp)
#Module 3
#add_executable(DanglingPointers Mod3/Lab/DanglingPointers.cpp)
#add_executable(DynamicArray Mod3/DynamicArray/DynamicArray.cpp)
#add_executable(Pie Mod3/Pie/Pie.cpp)
#Module 4
add_executable(Time Mod4/Lab4/Time.cpp)
add_executable(DisplayBox Mod4/DisplayBox/DisplayBox.cpp)

add_executable(Gym Mod5/Lab/Gym/Gym.cpp)
add_executable(CopyConstructor Mod5/Lab/CopyConstructor/CopyConstructor.cpp)
add_executable(Numbers Mod5/Numbers.cpp)