cmake_minimum_required(VERSION 3.23)
project(CS_151)

set(CMAKE_CXX_STANDARD 14)
#Module 1
#add_executable(SortNumbers Mod1/HW/SortNumbers/SortNumbers.cpp)
#add_executable(SortCountries Mod1/HW/SortCountries/SortCountries.cpp Mod1/HW/SortCountries/Country.cpp)
#Module 2
#add_executable(pi Mod2/review.cpp)
#add_executable(DtB Mod2/HW/DecimalToBinary/DecimalToBinary.cpp)
#Module 3
#add_executable(DanglingPointers Mod3/Lab/DanglingPointers.cpp)
#add_executable(DynamicArray Mod3/DynamicArray/DynamicArray.cpp)
#add_executable(Pie Mod3/Pie/Pie.cpp)
#Module 4
#add_executable(Time Mod4/Lab4/Time.cpp)
#add_executable(DisplayBox Mod4/DisplayBox/DisplayBox.cpp)
#Module 5
#add_executable(Gym Mod5/Lab/Gym/Gym.cpp)
#add_executable(CopyConstructor Mod5/Lab/CopyConstructor/CopyConstructor.cpp)
#add_executable(Numbers Mod5/Numbers.cpp)
#Module 6
#add_executable(EString Mod6/Lab/EString/main.cpp)
#add_executable(TimeDate Mod6/Lab/TimeDate/TimeDate.cpp)
#add_executable(DayOfYear Mod6/DayOfYear.cpp)
#Module 7
#add_executable(PeopleAtMCC Mod7/Lab/PeopleAtMCC/PeopleTester.cpp
#                           Mod7/Lab/PeopleAtMCC/PersonAtMCC.cpp
#                           Mod7/Lab/PeopleAtMCC/Student.cpp
#                           Mod7/Lab/PeopleAtMCC/Instructor.cpp
#                           Mod7/Lab/PeopleAtMCC/Staff.cpp)
#add_executable(Animal Mod7/Lab/Animal/AnimalTester.cpp
#                      Mod7/Lab/Animal/Animal.cpp
#                      Mod7/Lab/Animal/Fox.cpp
#                      Mod7/Lab/Animal/Owl.cpp)
#add_executable(PString Mod7/Palindromes/PString.cpp)
#add_executable(Encrypt Mod7/EncryptableString/EncryptableString.cpp)
#Module 8
add_executable(EncryptLab Mod8/Lab/EncryptableString/EncryptableString.cpp)
add_executable(StringFunctions Mod8/Lab/StringFunctions/StringFunctions.cpp)
add_executable(WordCounter Mod8/WordCounter.cpp)